welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:14: error: Unmatched closing brace '}' ignored here
 }
 ^